# code-style-checker

./: .gitignore  Makefile  README.md  pyproject.toml
checker/: style_checker.py
examples/: example.js  example.md  example.php  example.py
tests/: test_checker.py
