[project]
name = "code-style-checker"
version = "1.0.0"
description = "Lightweight CLI tool for detecting and fixing basic code style issues."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
  { name = "OneJooan", email = "one.jooan@gmail.com" }
]
dependencies = []

[project.scripts]
style-checker = "checker.style_checker:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"
